--- a/src/assets/pages/cadastro/Cadastro.css
+++ b/src/assets/pages/cadastro/Cadastro.css
@@ -1,5 +1,5 @@
 .fundoCadastro {
-  background-image: url("https://i.imgur.com/ZZFAmzo.jpg");
+  background-image: url("https://ik.imagekit.io/txvje9hzw/comfywork.jpg?updatedAt=1752372950482");
   background-repeat: no-repeat;
   width: 100%;
   min-height: 100vh;
