--- a/src/assets/pages/login/Login.css
+++ b/src/assets/pages/login/Login.css
@@ -1,5 +1,5 @@
 .fundoLogin {
-    background-image: url("https://i.imgur.com/ZZFAmzo.jpg");
+    background-image: url("https://ik.imagekit.io/txvje9hzw/comfywork.jpg?updatedAt=1752372950482");
     background-repeat: no-repeat;
     min-height: 100vh;
     width: 100%;
